[package]
name = "glium-glyph"
version = "0.11.0"
authors = ["ngynkvn <ngynkvn@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/ngynkvn/glium-glyph"
description = "Fork of https://github.com/est31/glium-glyph"
documentation = "https://docs.rs/glium-glyph"
exclude = ["fonts/**"]

[dependencies]
glium = { version = "0.30.1", default-features = false }
#glium = { path = "../glium", default-features = false }
glyph_brush = "0.7.2"

[dev-dependencies]
glium = "0.30.1"
#glium = { path = "../glium" }
